Use env variables and create Procfile.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # For example we ignore the hidden files from Pycharm and VS Code.
 .idea/
 .vscode
+.run/
+.run
 
 ### Also any macOS specific files
 .DS_Store
